--- a/index.css
+++ b/index.css
@@ -1,20 +1,29 @@
 :root {
-        --bg-color-dark: #121212;
+        --primary-dark: #121212;
+        --primary-light: #DDD;
         --ice-blue: #006EE6;
 }
 
+body {
+        font-family: sans-serif;
+        margin: 0px;
+        padding: 0px;
+}
+
 nav {
-        background-color: var(--bg-color-dark);
+        background-color: var(--primary-dark);
+        display: flex;
+        align-items: center;
         color: #FFF;
-        position: absolute;
         width: 100%;
-        height: 60px;
+        height: 4em;
+        padding-left: 10px;
 }
 
 .hub {
         background-color: var(--ice-blue);
-        color: var(--font-color-light);
+        color: var(--primary-dark);
         padding: 5px;
         border-radius: 5px;
-        margin-left: 10px;
+        margin-left: 5px;
 }
